changed cool stuff.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,15 @@ div#__next > div {
 .about-output ul,
 .about-output ol { margin: 0.25rem 0 0.25rem 1rem; }
 
+.description-block {
+  margin: 1em auto;
+  padding: 1em;
+  max-width: 40ch;
+  text-align: center;
+  white-space: pre-line;
+  border-radius: 8px;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
